# Anima-Gemma4-Fusion-Multimodal

./: .gitignore  BLOCKERS.md  GEMMANIMA_NEXT_VERSION_PLAN.md  GemmAnima.bat  LICENSE.md  PARKING_LOT.md  README.ko.md  README.md  pyproject.toml
RTD/: GITHUB_COMMIT_PREP.md  GITHUB_README.md  HF_MODEL_CARD.ko.md  HF_MODEL_CARD.md  LICENSE_NOTICES.md  README.md  asset_manifest.json
configs/: models.yaml  renderer_profiles.yaml
docs/: architecture_summary.md  conflict_resolver_spec.md  data_policy.md  session_summary_2026-05-28.md  training_pipeline.md  verification_plan.md  version_roadmap.md
gemmanima/: __init__.py  api.py  cli.py  server.py  ui.py
re-learning/: 01_cache_images_4070.ps1  02_train_vision_tagger_4070.ps1  03_status.ps1  04_cache_then_train_4070.ps1  06_after_vram_limit_train_eval.ps1  08_prepare_vision_tagger_precision_pose_v2.ps1  09_cache_vision_tagger_precision_pose_v2_4070.ps1  10_train_vision_tagger_precision_pose_v2_4070.ps1  11_eval_vision_tagger_precision_pose_v2_4070.ps1  12_status_precision_pose_v2.ps1  13_cache_mixed_precision_pose_v2_5060.ps1  15_prepare_mixed_pose_front_v2.ps1  16_train_mixed_pose_front_v2_4070.ps1  17_eval_mixed_pose_front_v2_4070.ps1  18_cache_then_train_mixed_pose_front_v2_4070.ps1  README.md
reports/: training_readiness_hiddenstage_v0.json
schemas/: cache_build_manifest.schema.json  conditioning_bundle.schema.json  conflict_report.schema.json  gemmanima_protocol.schema.json  run_manifest.schema.json
scripts/: 00_audit_bridge_quality_1p53m_v2_153k.ps1  01_cache_targets_bridge_quality_1p53m_v2_153k_4070.ps1  (+58 more)
(+149 files in other folders)
